--- a/src/app/micro-frontend-nav/micro-frontend-nav.component.html
+++ b/src/app/micro-frontend-nav/micro-frontend-nav.component.html
@@ -1,5 +1,6 @@
 <nav>
   <ul>
+    <li><a routerLink="/">Dashboard</a></li>
     <li><a routerLink="/ff">Feature Flag</a></li>
     <li><a routerLink="/account">Account</a></li>
   </ul>
